[package]
name = "double_hexxed"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
hexgridspiral = { git = "https://github.com/D0ubleD0uble/hexgridspiral.git", branch = "feature/support_unregular_hexes" }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev.package."*"]
opt-level = 2
